--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
         <div id="fish-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
         <div id="no-results" class="hidden text-center text-gray-500 mt-8">No Fishes Found</div>
+        <a href="support.html" class="text-emerald-600 hover:underline">Support This Project</a>
     </div>
     <script src="fish.js"></script>
     <script src="script.js"></script>
