--- a/support.html
+++ b/support.html
@@ -32,7 +32,7 @@
         <p class="text-gray-600">Email me at <a href="mailto:hanhtoophyo90@gmail.com" class="text-blue-700 underline">hanhtoophyo90@gmail.com</a></p>
       </div>
     </div>
-    <p class="mt-12 text-sm text-gray-500 text-center">Thank you for your interest in protecting Burma’s biodiversity 🇲🇲</p>
+    <p class="mt-12 text-sm text-gray-500 text-center">Thank you for your interest in protecting Burma’s biodiversity </p>
   </div>
 </body>
 </html>
