--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container mx-auto p-4">
         <header class="text-center mb-8">
             <h1 class="text-4xl font-bold text-blue-700">Native Fishes of Burma</h1>
-            <p class="text-gray-600 mt-2 text-lg">A searchable guide to freshwater and marine fish of Burma.</p>
+            <p class="text-gray-600 mt-2 text-lg">A searchable guide to freshwater and marine fishes of Burma.</p>
         </header>
         <div class="mb-6">
             <input type="text" id="search-input" placeholder="Search fishes..." class="w-full p-3 border rounded" />
@@ -22,5 +22,33 @@
     </div>
     <script src="fish.js"></script>
     <script src="script.js"></script>
+    <!-- Footer -->
+<footer class="bg-gray-100 text-gray-600 text-sm mt-12 border-t border-gray-200">
+  <div class="max-w-6xl mx-auto px-4 py-6 flex flex-col md:flex-row justify-between items-center gap-4 text-center md:text-left">
+    
+    <!-- Left -->
+    <div>
+      <p>&copy; 2025 <span class="font-medium text-gray-800">Han Htoo Phyo</span>. All Rights Reserved.</p>
+      <p class="mt-1">Content licensed under 
+        <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" class="text-emerald-600 hover:underline">
+          CC BY-NC 4.0
+        </a>
+      </p>
+    </div>
+
+    <!-- Middle -->
+    <div class="flex gap-4">
+      <a href="index.html" class="hover:underline">Home</a>
+      <a href="support.html" class="hover:underline">Support</a>
+      <a href="https://github.com/hanhtoophyo90" target="_blank" class="hover:underline">GitHub</a>
+    </div>
+
+    <!-- Right -->
+    <div>
+      <p> Built with ❤️ for Burma’s Biodiversity</p>
+    </div>
+    
+  </div>
+</footer>
 </body>
 </html>
