--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata -->
+<meta name="description" content="Explore the native fishes of Burma with this searchable guide showcasing stunning photos, scientific info, habitats, and conservation status.">
+<meta name="author" content="Han Htoo Phyo">
+<meta name="keywords" content="Burma fishes, fishes of Burma, native fishes, biodiversity, fish species, ornithology, conservation, Southeast Asia fishes">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Native Fishes of Burma">
+<meta property="og:description" content="A beautifully designed interactive guide to the native fishes of Burma, featuring species data, habitat, and conservation status.">
+<meta property="og:image" content="https://raw.githubusercontent.com/hanhtoophyo90/burma-fishes-site/main/assets/fishes-preview.jpg"> <!-- Replace with actual image URL -->
+<meta property="og:url" content="https://hanhtoophyo90.github.io/burma-fishes-site/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Native Fishes of Burma">
+<meta name="twitter:description" content="A searchable fish guide featuring endemic species of Burma. Learn about their habitat, conservation status, and more.">
+<meta name="twitter:image" content="https://raw.githubusercontent.com/hanhtoophyo90/burma-fishes-site/main/assets/fishes-preview.jpg"> <!-- Replace with actual image URL -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Native Fishes of Burma</title>
@@ -13,14 +32,32 @@
             <h1 class="text-4xl font-bold text-blue-700">Native Fishes of Burma</h1>
             <p class="text-gray-600 mt-2 text-lg">A searchable guide to freshwater and marine fishes of Burma.</p>
         </header>
-        <div class="mb-6">
-            <input type="text" id="search-input" placeholder="Search fishes..." class="w-full p-3 border rounded" />
+        
+        <!-- Search Bar -->
+        <div class="mb-8 max-w-2xl mx-auto">
+            <div class="relative">
+                <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+                    <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <input type="text" id="search-input" placeholder="Search for a fish by name..." class="w-full pl-10 pr-4 py-3 border border-gray-300 rounded-full shadow-sm focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-transparent transition-shadow">
+            </div>
         </div>
-        <div id="fish-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-        <div id="no-results" class="hidden text-center text-gray-500 mt-8">No Fishes Found</div>
-        <a href="support.html" class="text-emerald-600 hover:underline">Support This Project</a>
+
+        <!-- Fish Cards Grid -->
+        <div id="fish-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+            <!-- Fish cards will be dynamically inserted here by JavaScript -->
+        </div>
+
+        <!-- No Results Message -->
+        <div id="no-results" class="hidden text-center py-16">
+            <h3 class="text-2xl font-semibold text-gray-700">No Fishes Found</h3>
+            <p class="text-gray-500 mt-2">Try a different search term.</p>
+        </div>
     </div>
-    <script src="fish.js"></script>
+    
+    <script src="data.js"></script>
     <script src="script.js"></script>
     <!-- Footer -->
 <footer class="bg-gray-100 text-gray-600 text-sm mt-12 border-t border-gray-200">
